methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:41: error: not enough arguments for method fourV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
     fourV();
          ^